# scraping-data-pipeline

./: .gitignore  GITHUB_PUSH.md  LICENSE  README.md  UPWORK_PROJECT_CATALOG.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: books.csv  books_sample.csv  laptops.csv  laptops_manifest.json  scrape_manifest.json
examples/configs/: books_to_scrape.json  marketplace_listing_template.json  shop_listing_template.json
outputs/sample_report/: scraping_report.typ
outputs/scale_10k/: books_10k.csv  scraping_report.typ
src/scrape_quality_pipeline/: __init__.py  __main__.py  cli.py  configs.py  exporters.py  http_client.py  models.py  parser.py  pipeline.py  reporting.py  schema.py
tests/: test_cli.py  test_http_client.py  test_parser.py  test_pipeline.py  test_reporting.py  test_schema.py
tests/fixtures/: books_page.html
