[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-quality-pipeline"
version = "0.1.0"
description = "Production-style web scraping pipeline with validation, tests, and Codecov-ready coverage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emir Huseyin Inci" }]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.1",
    "pandera>=0.19",
    "pydantic>=2.6",
    "selectolax>=0.3.21",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
scrape-books = "scrape_quality_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scrape_quality_pipeline --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"
markers = [
    "integration: tests that may call live websites",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.coverage.run]
omit = [
    "src/scrape_quality_pipeline/__main__.py",
]
